--- a/arml/mining/tokenstaking/Cargo.toml
+++ b/arml/mining/tokenstaking/Cargo.toml
@@ -23,6 +23,7 @@ srml-balances = { git = "https://github.com/paritytech/substrate", rev = '2e30b7
 arml-system = { path = "../../system", default_features = false }
 arml-support = { path = "../../support",  default_features = false }
 arml-associations = { path = "../../associations",  default_features = false }
+arml-tokenbalances = { path = "../../tokenbalances",  default_features = false }
 arml-mining-staking = { path = "../staking", default_features = false }
 
 [features]
@@ -43,6 +44,7 @@ std=[
     # arml
     "arml-system/std",
     "arml-associations/std",
+    "arml-tokenbalances/std",
     "arml-support/std",
     "arml-mining-staking/std",
 ]
