--- a/arml/funds/withdrawal/Cargo.toml
+++ b/arml/funds/withdrawal/Cargo.toml
@@ -1,55 +1,61 @@
 [package]
-name = "arml-mining-staking"
+name = "arml-funds-withdrawal"
 version = "0.3.0"
 authors = ["Akropolis <https://akropolis.io>"]
+
 
 [dependencies]
 hex-literal = "0.1.0"
 serde = { version = "1.0", default_features = false }
 serde_derive = { version = "1.0", optional = true }
-safe-mix = { version = "1.0", default_features = false}
-parity-codec = { version = "3.5", default-features = false, features = ['derive'] }
+parity-codec = { version = "2.0", default-features = false }
 parity-codec-derive = { version = "2.0", default-features = false }
-substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }
 substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 sr-std = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 sr-io = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 sr-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 srml-support = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
-srml-balances = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
-srml-consensus = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 srml-system = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
-srml-session = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
+srml-balances = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 srml-timestamp = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
+srml-consensus = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 
-arml-system = { path = "../../system", default_features = false }
-arml-support = { path = "../../support",  default_features = false }
-arml-associations = { path = "../../associations",  default_features = false }
-arml-tokenbalances = { path = "../../tokenbalances",  default_features = false }
-arml-funds-financialrecords = { path = "../../funds/financialrecords", default_features = false }
+# arml
+arml-system = { path = "../../system", default-features = false }
+arml-associations = { path = "../../associations", default-features = false }
+arml-support = { path = "../../support", default_features = false }
+arml-tokenbalances = { path = "../../tokenbalances", default_features = false }
+arml-funds-financialrecords = { path = "../financialrecords", default_features = false }
+
+# bridge
+arml-bridge-btc = { path = "../../bridge/btc", default_features = false }
+
+base58 = { version = "0.1", optional = true }
 
 [features]
 default = ["std"]
-std = [
+std=[
     "serde/std",
     "serde_derive",
-    "safe-mix/std",
-    "substrate-keyring",
     "parity-codec/std",
     "parity-codec-derive/std",
     "substrate-primitives/std",
     "sr-std/std",
     "sr-io/std",
-    "srml-support/std",
     "sr-primitives/std",
-    "srml-balances/std",
-    "srml-session/std",
+    "srml-support/std",
     "srml-system/std",
+    "srml-balances/std",
     "srml-timestamp/std",
-    # arml
+    "srml-consensus/std",
+    "arml-system/std",
     "arml-associations/std",
+    "arml-support/std",
     "arml-tokenbalances/std",
     "arml-funds-financialrecords/std",
-    "arml-system/std",
-    "arml-support/std",
+    # bridge
+    "arml-bridge-btc/std",
+
+    # other
+    "base58",
 ]
