--- a/arml/exchange/pendingorders/Cargo.toml
+++ b/arml/exchange/pendingorders/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "arml-mining-tokenstaking"
+name = "arml-exchange-pendingorders"
 version = "0.3.0"
-authors = ["Akropolis <https://akropolis.io>"]
-
+authors = ["Chainpool <https://www.chainx.org>"]
 
 [dependencies]
 hex-literal = "0.1.0"
@@ -16,18 +15,15 @@ sr-io = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc
 sr-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 srml-support = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 srml-system = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
-srml-timestamp = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 srml-balances = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 
-# akro runtime module
-arml-system = { path = "../../system", default_features = false }
-arml-support = { path = "../../support",  default_features = false }
-arml-associations = { path = "../../associations",  default_features = false }
-arml-tokenbalances = { path = "../../tokenbalances",  default_features = false }
-arml-mining-staking = { path = "../staking", default_features = false }
-arml-funds-financialrecords = { path = "../../funds/financialrecords", default_features = false }
-arml-exchange-pendingorders = { path = "../../exchange/pendingorders", default_features = false }
-arml-bridge-btc = { path = "../../bridge/btc", default_features = false }
+log = "0.4"
+
+# arml module
+arml-system = { path = "../../system", default-features = false }
+arml-associations = { path = "../../associations", default-features = false }
+arml-support = { path = "../../support", default_features = false }
+arml-tokenbalances = { path = "../../tokenbalances", default_features = false }
 
 [features]
 default = ["std"]
@@ -42,15 +38,9 @@ std=[
     "sr-primitives/std",
     "srml-support/std",
     "srml-system/std",
-    "srml-timestamp/std",
     "srml-balances/std",
-    # arml
     "arml-system/std",
     "arml-associations/std",
-    "arml-tokenbalances/std",
     "arml-support/std",
-    "arml-mining-staking/std",
-    "arml-funds-financialrecords/std",
-    "arml-exchange-pendingorders/std",
-    "arml-bridge-btc/std",
+    "arml-tokenbalances/std",
 ]
