--- a/arml/associations/Cargo.toml
+++ b/arml/associations/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Akropolis <https://akropolis.io>"]
 hex-literal = "0.1.0"
 serde = { version = "1.0", default_features = false }
 serde_derive = { version = "1.0", optional = true }
-parity-codec = { version = "2.0", default-features = false }
+parity-codec = { version = "3.5", default-features = false, features = ['derive'] }
 parity-codec-derive = { version = "2.0", default-features = false }
 substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 sr-std = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
